refactor: remove duplicate backend code
